--- a/src/app/components/load-files/load-files.component.html
+++ b/src/app/components/load-files/load-files.component.html
@@ -7,8 +7,20 @@
         <div class="form-group">
             <input type="file" (change)="onFileChange($event)" class="form-control" formControlName="file">
         </div>
+        
         <div>
-            <button class="btn btn-info" [disabled]="checkoutForm.invalid">Cargar</button>
+            <button class="btn btn-info" [disabled]="checkoutForm.invalid">
+                <div *ngIf="!isLoading">
+                    Cargar
+                </div>
+                <div *ngIf="isLoading" class="spinner-border text-white" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </button>
         </div>
     </form>
+    <div class="col-12">
+        <h2>Snr restaurados: {{snr_restaurados.length}}</h2>
+        <h2>Snr No restaurados: {{snr_no_restaurados.length}}</h2>
+    </div>
 </div>
