--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,6 +9,12 @@
         <li class="nav-item active">
           <a class="nav-link" [routerLink]="['loadfiles']">Cargar archivos</a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['showdata']">Mostrar data</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['showcharts']">Mostrar gracficas</a>
+        </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
